fixing hr spacing

--- a/index.css
+++ b/index.css
@@ -100,7 +100,7 @@ hr {
   border: none;
   height: 100px;
   width: 150px;
-  margin: 8em auto;
+  margin: 3em auto;
 }
 
 /**
